added responsive design and color schemes

--- a/src/index.html
+++ b/src/index.html
@@ -3,53 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Irene Gitau</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Full Stack Developer Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="https://github.com/Annah-2003" target="_blank">Projects</a></li>
+                <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>👩‍💻 Aspiring Software Engineer.Passionate about coding and creating digital solutions | Learning and contributing to the tech world | Open to collaboration.</p>
-        </section>
+    <section id="about">
+        <div class="container">
+            <h1>Irene Gitau</h1>
+            <p>Certified in all computer packages. Proficient in a variety of programming languages including JavaScript, HTML, CSS, C++, Java, and Python.</p>
+            <p>Experienced in building web applications using Flask and React frameworks</p>
+            <p>Skill set in deployment of websites through Vercel, Render, and Netlify.</p>
+            <p>Strong problem-solving skills with a keen attention to detail.</p>
 
-        <section id="skills">
+            <h2>Career Objectives</h2>
+            <ul>
+                <li>To contribute effectively to a dynamic organization, leveraging my talents and skills for organizational growth, personal development, and career advancement, while serving both God and humanity.</li>
+                <li>To pursue a career by which I will be able to achieve the highest level of productivity as an individual or as a group by fully maximizing the knowledge I have and fully exploiting my talent and potential.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project">
+                <h3>Project Name</h3>
+                <iframe src="project-demo-url" frameborder="0"></iframe>
+                <p>Project description...</p>
+                <a href="https://github.com/Annah-2003/Her-Link">View Code</a>
+            </div>
+            <!-- Add more projects as needed -->
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container">
             <h2>Skills</h2>
             <ul>
-                <li>JavaScript</li>
-                <li>Java</li>
-                <li>C++</li>
-                <li>Python</li>
-                <li>HTML</li>
-                <li>CSS</li>
+                <li>Proficient in computer applications and general use of the internet and modern technology</li>
+                <li>Excellent proficiency in both written and spoken Kiswahili</li>
+                <li>Strong communication and persuasive skills</li>
+                <li>Excellent interpersonal skills</li>
+                <li>Assertiveness and adept behavior management</li>
+                <li>Effective team organization and personal skills</li>
             </ul>
-        </section>
+        </div>
+    </section>
 
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Display your projects here.</p>
-        </section>
+    <section id="blog">
+        <div class="container">
+            <h2>Blog</h2>
+            <article>
+                <h3>Article Title</h3>
+                <p>Article summary...</p>
+                <a href="blog-post-url">Read More</a>
+            </article>
+            <!-- Add more articles as needed -->
+        </div>
+    </section>
 
-        <section id="contact">
+    <section id="contact">
+        <div class="container">
             <h2>Contact</h2>
-            <ul>
-                <li><a href="mailto:your.email@example.com">Email</a></li>
-                <li><a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
-            </ul>
-        </section>
-    </main>
+            <p>Phone Number:<a href=" 0717035023">0717035023</a></p>
+            <p>Email: <a href="mailto:irenengitau@gmail.com">irenengitau@gmail.com</a></p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Irene Gitau. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
