--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
 
     <section id="about">
         <div class="container">
-            <h1>Irene Gitau</h1>
+            <div class="hero">
+                <h1 class="name">Irene Gitau</h1>
+                <p class="tagline">Certified Software Engineer | Problem Solver | Tech Enthusiast</p>
+            </div>
             <p>Certified in all computer packages. Proficient in a variety of programming languages including JavaScript, HTML, CSS, C++, Java, and Python.</p>
             <p>Experienced in building web applications using Flask and React frameworks</p>
             <p>Skill set in deployment of websites through Vercel, Render, and Netlify.</p>
@@ -39,12 +42,17 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                <h3>Project Name</h3>
-                <iframe src="project-demo-url" frameborder="0"></iframe>
+                <h3>Chuo Yangu</h3>
+                <iframe src="https://chuo-yangu.vercel.app/ " frameborder="0"></iframe>
+                <p>Project description...</p>
+                <a href="https://github.com/SolveMMG/PHASE--5-SEV-0">View Code</a>
+            </div>
+            <div class="project">
+                <h3>Her-Link</h3>
+                <iframe src="https://her-link.vercel.app/home" frameborder="0"></iframe>
                 <p>Project description...</p>
                 <a href="https://github.com/Annah-2003/Her-Link">View Code</a>
             </div>
-            <!-- Add more projects as needed -->
         </div>
     </section>
 
@@ -59,6 +67,9 @@
                 <li>Assertiveness and adept behavior management</li>
                 <li>Effective team organization and personal skills</li>
             </ul>
+            <div class="typewriter">
+                <p id="typewriter-text"></p>
+            </div>
         </div>
     </section>
 
@@ -70,14 +81,13 @@
                 <p>Article summary...</p>
                 <a href="blog-post-url">Read More</a>
             </article>
-            <!-- Add more articles as needed -->
         </div>
     </section>
 
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Phone Number:<a href=" 0717035023">0717035023</a></p>
+            <p>Phone Number: <a href="tel:0717035023">0717035023</a></p>
             <p>Email: <a href="mailto:irenengitau@gmail.com">irenengitau@gmail.com</a></p>
         </div>
     </section>
