added features to the html file

--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,7 @@
                 <h1 class="name">Irene Gitau</h1>
                 <p class="tagline">Certified Software Engineer | Problem Solver | Tech Enthusiast</p>
             </div>
-            <p>Certified in all computer packages. Proficient in a variety of programming languages including JavaScript, HTML, CSS, C++, Java, and Python.</p>
-            <p>Experienced in building web applications using Flask and React frameworks</p>
-            <p>Skill set in deployment of websites through Vercel, Render, and Netlify.</p>
-            <p>Strong problem-solving skills with a keen attention to detail.</p>
-
+            <p>Certified in all computer packages. Proficient in a variety of programming languages including JavaScript, HTML, CSS, C++, Java, and Python. Experienced in building web applications using Flask and React frameworks. Skilled in deploying websites through Vercel, Render, and Netlify. Strong problem-solving skills with keen attention to detail.</p>
             <h2>Career Objectives</h2>
             <ul>
                 <li>To contribute effectively to a dynamic organization, leveraging my talents and skills for organizational growth, personal development, and career advancement, while serving both God and humanity.</li>
@@ -43,7 +39,7 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>Chuo Yangu</h3>
-                <iframe src="https://chuo-yangu.vercel.app/ " frameborder="0"></iframe>
+                <iframe src="https://chuo-yangu.vercel.app/" frameborder="0"></iframe>
                 <p>Project description...</p>
                 <a href="https://github.com/SolveMMG/PHASE--5-SEV-0">View Code</a>
             </div>
