added a demo btn

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
+                <button class="demo-btn" data-demo-url="https://chuo-yangu.vercel.app/">Live Demo</button>
                 <h3>Chuo Yangu</h3>
                 <iframe src="https://chuo-yangu.vercel.app/" frameborder="0"></iframe>
                 <p>Project description...</p>
