styled demo btn

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
             </div>
             <div class="project">
                 <h3>Her-Link</h3>
+                <button class="demo-btn" data-demo-url="https://her-link.vercel.app/home">Live Demo</button>
                 <iframe src="https://her-link.vercel.app/home" frameborder="0"></iframe>
                 <p>Project description...</p>
                 <a href="https://github.com/Annah-2003/Her-Link">View Code</a>
