updated project description

--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,15 @@
                 <h3>Chuo Yangu</h3>
                 <iframe src="https://chuo-yangu.vercel.app/" frameborder="0"></iframe>
                 <p>Project description...</p>
+                <p>In today's fast-paced world, CHUO YANGU addresses the persistent communication challenges faced by students in universities, colleges, and schools, enhancing their productivity, collaboration, and well-being by delivering information quickly, efficiently, and reliably.
+                </p>
                 <a href="https://github.com/SolveMMG/PHASE--5-SEV-0">View Code</a>
             </div>
             <div class="project">
                 <h3>Her-Link</h3>
                 <iframe src="https://her-link.vercel.app/home" frameborder="0"></iframe>
                 <p>Project description...</p>
+                <p>HerLink aims to create a user-friendly environment where individuals can connect with their girlfriends and chat about anything and everything. The application features a sleek and modern design, making it appealing and easy to navigate for users of all ages.</p>
                 <a href="https://github.com/Annah-2003/Her-Link">View Code</a>
             </div>
         </div>
@@ -55,14 +58,7 @@
     <section id="skills">
         <div class="container">
             <h2>Skills</h2>
-            <ul>
-                <li>Proficient in computer applications and general use of the internet and modern technology</li>
-                <li>Excellent proficiency in both written and spoken Kiswahili</li>
-                <li>Strong communication and persuasive skills</li>
-                <li>Excellent interpersonal skills</li>
-                <li>Assertiveness and adept behavior management</li>
-                <li>Effective team organization and personal skills</li>
-            </ul>
+           
             <div class="typewriter">
                 <p id="typewriter-text"></p>
             </div>
